Social Skills in bullets

--- a/cv.tex
+++ b/cv.tex
@@ -118,15 +118,16 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{Fall 2012}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
-                         & \footnotesize{Tutored students in ESC101, which covered the basic concepts of
-                            programming.}\\
+                         & \footnotesize{Tutored a batch of four students in ESC101 --- a core course on
+                            basic concepts of programming --- the instructor-in-charge was \textbf{Professor
+                            Sumit Ganguly}}\\
     \textsc{Jan 2010}    & Qualified for \textbf{Indian National Mathematics Olympaid} (INMO) \\
     \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{Sep 2010}    & \textbf{AIR 17} in \textbf{Technothlon} (Techniche) conducted by Indian Institute of Technology Guwahati. \\
     \textsc{June 2010}   & Awarded \textbf{Top Scorer in English} by \textbf{Laurels School International} in ICSE 2009. \\
     \textsc{Dec 2009}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{Dec 2005}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
-    \textsc{2000 - 2009} & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic
+    \textsc{2000 -- 2009} & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic
                            performance throughout 2nd to 12th grade. \\
 
 \end{tabular}
@@ -169,7 +170,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
-    \textsc{May-Jul 2013} & Software Development at \textsc{Aurus Networks}, Bangalore
+    \textsc{May-Jul 2013} & Software Development at \textsc{Aurus Networks'}, Bangalore
                             \footnotesize{
                                 \begin{itemize}[leftmargin=*]
                                     \item Worked on \textbf{Aurus Networks} MOOC offereing \textbf{CourseHub}.
@@ -193,7 +194,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             which compiled to MIPS was implemented in Python. No runtime support
                             was provided ergo, static types and type annotations were used instead.
                             The project was undertaken in the aegis of \textbf{Professor Subhajit Roy}.
-                            \href{https://github.com/srijanshetty/javascript-compiler} {Git Repo}} \\
+                            \href{https://github.com/srijanshetty/javascript-compiler} {[Git Repo]}} \\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
@@ -205,7 +206,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             into different authors using supervised learning techniques.
                             The project was supervised by \textbf{Professor Amitabha Mukherjee} and was
                             inherently difficult due to the unavailability of stemmers and POS taggers for Hindi.
-                            \href{https://github.com/srijanshetty/author-attribution} {Git Repo}}\\
+                            \href{https://github.com/srijanshetty/author-attribution} {[Git Repo]}}\\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
@@ -221,7 +222,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                        & \footnotesize{A Node.js based local file server and media playback server was implemented
                           to understand the underpinnings of Transport Layer Protocols, socket programming,
                           and P2P architecture.  The project was supervised by \textbf{Professor Dheeraj Sanghi}.
-                          \href{https://github.com/srijanshetty/nodesock} {Git Repo}}\\
+                          \href{https://github.com/srijanshetty/nodesock} {[Git Repo]}}\\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
@@ -251,7 +252,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             supervision of \textbf{Professor Subhajit Roy}.  It had a limited, but powerful
                             Instruction Set Architecture which could implement recursive functions, jumps,
                             loops  other basic building blocks of a simple assembly language.
-                            \href{https://github.com/srijanshetty/220_y11} {Git Repo}} \\
+                            \href{https://github.com/srijanshetty/220_y11} {[Git Repo]}} \\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
@@ -259,7 +260,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                          & \footnotesize{A python based web crawler which could obtain paper submission
                             deadlines of a provided conference name.  BeautifulSoup and urllib along
                             with simple pattern matching through regular expressions were used to implement crawling.
-                            \href{https://github.com/srijanshetty/crawler} {Git Repo} } \\
+                            \href{https://github.com/srijanshetty/crawler} {[Git Repo]} } \\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
@@ -284,7 +285,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                           sluggish legacy course search. The data was obtained by
                           scraping the official data portal of IIT Kanpur, and the
                           project is now maintained by \textbf{Navya}
-                          \href{https://github.com/navya/oars} {Git Repo} }\\
+                          \href{https://github.com/navya/oars} {[Git Repo]} }\\
 
 \end{tabular}
 
@@ -294,22 +295,22 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                            is a simple hassle-free homepage designer for students who are not
                            proficient in web technologies. It provides a WYSIWIG
                            interface for editing themes and downloading them for personal use.
-                           \href{http://gyph2.herokuapp.com/} {Website} } \\
+                           \href{http://gyph2.herokuapp.com/} {[Website]} } \\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
     \textsc{August 2013} & ShuffleRun\\
                          & \footnotesize{A hack for Yahoo HackU. ShuffleRun is a
                             web based music player which selects a track from the users library according to her running speed.
-                            \href{https://github.com/srijanshetty/ShuffleRun} {GitHub Repo} }\\
+                            \href{https://github.com/srijanshetty/ShuffleRun} {[Git Repo]}}\\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
-    \textsc{July 2013} & Website of Udghosh, annual sports-fest IIT Kanpur \footnotesize{\href{www.udghosh.org} {Webpage} } \\
+    \textsc{July 2013} & \href{www.udghosh.org}{Website of Udghosh}, the annual sports-fest of IIT Kanpur\\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
-    \textsc{Dec 2012} & Website of Hall 5, IIT Kanpur \footnotesize{\href{http://www.iitk.ac.in/hall5} {Webpage}} \\
+    \textsc{Dec 2012} & \href{http://www.iitk.ac.in/hall5}{Website of Hall 5}, IIT Kanpur \\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
@@ -328,19 +329,19 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                              memory management, shell interface etc. And was
                              undertaken under the aegis of \textbf{Programming Club, IIT Kanpur}
                              \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}
-                             {Documentation} } \\
+                             {[Documentation]} } \\
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
     \textsc{July 2013} & Projects on Github \\
                        & \footnotesize{\textbf{Dotfiles}: an opinionated work flow on Linux Systems.
-                          \href{https://github.com/srijanshetty/dotfiles} {Repo} } \\
+                         \href{https://github.com/srijanshetty/dotfiles} {[Git Repo]} } \\
                        & \footnotesize{\textbf{Prezto}: a fork of the Prezto ZSH framework
-                          \href{https://github.com/srijanshetty/prezto} {Repo}} \\
+                          \href{https://github.com/srijanshetty/prezto} {[Git Repo]}} \\
                        & \footnotesize {\textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework
-                          \href{https://github.com/srijanshetty/oh-my-zsh} {Repo} } \\
+                          \href{https://github.com/srijanshetty/oh-my-zsh} {[Git Repo]} } \\
                        & \footnotesize{\textbf{DS}: implementation of certain algorithms and data structures
-                          \href{https://github.com/srijanshetty/DS} {Repo}} \\
+                          \href{https://github.com/srijanshetty/DS} {[Git Repo]}} \\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -351,46 +352,60 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
 
-    -   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
+    --   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
 
-    -    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}\\
-         & \footnotesize{Navya is the Free and Open Source Software Group at IIT
-           Kanpur which educates the campus community about the FOSS mission and
-           hacks on FOSS applications which would be of use to the students
-           community \href{https://github.com/navya} {Github Repo}} \\
+    --    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}
+           \footnotesize{
+               \begin{itemize}[leftmargin=*]
+                   \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
+                   \item Promoted the FOSS initiative by giving student lectures.
+                   \item Worked on student-centred projects like Course Search and Student Search.
+                   \item \href{https://github.com/navya} {[Git Repo]}
+               \end{itemize}
+           }\\
 
-    2013-2014    & \textbf{Volunteer, English Proficiency Programme}\\
-                 & \footnotesize{English Proficiency Programme is the brainchild
-                    of \textbf{Professor Bhaskar Dasgupta}. The objective of the
-                    programme is to impart a functional knowledge of English to
-                    any interested student. I was a volunteer of the first leg
-                    of the programme which helped under-privileged students.}\\
+    2013-2014    & \textbf{Volunteer, English Proficiency Programme}
+                   \footnotesize{
+                       \begin{itemize}[leftmargin=*]
+                           \item A brainchild of \textbf{Professor Bhaskardas Gupta}, English Proficiency
+                               Programme tries to impart a functional knowledge of English to students.
+                           \item I assisted in the first leg of the programme which focussed in helping
+                               under-privileged students learn English.
+                       \end{itemize}
+                   }\\
 
     2014 & \textbf{Head, Major Events and Competitions, Antaragni'14} , the annual cultural festival of
     IIT Kanpur. \\
 
-    2013 & \textbf{Hospitality Coordinator, Antaragni ‘13}\\
-         & \footnotesize{As a Hospitality Coordinator, I oversaw a team of 150 students responsible for
-            the hospitality of the 1500 students who visit the campus for Antaragni, the annual cultural festival
-            of IIT Kanpur which takes place in October every year.}\\
+    2013 & \textbf{Hospitality Coordinator, Antaragni ‘13}
+           \footnotesize{
+               \begin{itemize}[leftmargin=*]
+                   \item Oversaw a team of \textbf{150} students for a span of 8 months.
+                   \item Chalked out the logistics for the hospitality and accommodation of \textbf{1500 students} who
+                       participated in festival.
+                   \item Made sure everything went smoothly during the four days of the Festival from 24$^{th}$
+                       to 27$^{th}$ October.
+               \end{itemize}
+           }\\
 
     2013 & \textbf{Editor-in-chief, Vox Populi}, the campus newsletter. \\
-         & \footnotesize{Vox Populi is the campus newsletter of IIT Kanpur with a reach of more than 6000 students.
-            As, the Editor-in-chief, I was responsible for ensuring impeccable quality of content in the newsletter and
-            logistics of publishing the bi-monthly newsletter.}\\
 
-    2012 & \textbf{Member Gymkhana Review Committee}\\
-         & \footnotesize{The Gymkhana Review Committee was set up with the vision of revamping the Student's Gymkhana
-            of IIT Kanpur, which is the body responsible for all extra curricular activities of the campus. As a
-            member of the Gymkhana Review Committee, I chaired the sessions on \textbf{Extended Orientation of
-            incoming freshmen students}, as a member of the committee, I gave valuable inputs to other academic,
-            senate and activities reforms introduced by the committee.}\\
+    2012 & \textbf{Member, Gymkhana Review Committee}
+           \footnotesize{
+               \begin{itemize}[leftmargin=*]
+                   \item The GRC was established to revamp the Students' Gymkhana of IIT Kanpur,
+                       which is responsible for all the student activities of the institute.
+                   \item I chaired the sessions on \textbf{Extended Orientation of Freshmen}.
+                   \item Additionally, I gave inputs to other academic, senate and activities sub-committees formed
+                       under the GRC.
+               \end{itemize}
+           }\\
 
     2012 & \textbf{Senator, Students' Senate}, IITK Y11 batch. \\
 
     2012 & \textbf{Secretary, English Literary Society}. \\
 
-    2010 & A year of schooling in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad). \\
+    2010 & Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad). \\
 
 \end{tabular}
 
@@ -409,7 +424,4 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     Multivariate Calculus (MTH101) & Technical Communication(CS300)\\
                      \\
 \end{tabular}
-%----------------------------------------------------------------------------------------
-%  SIDE PROJECTS
-%----------------------------------------------------------------------------------------
 \end{document}
